Fix dark mode colors

--- a/src/css/_nav.scss
+++ b/src/css/_nav.scss
@@ -36,6 +36,7 @@ $navItem-dark: white;
 
   .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='%23fff' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    filter: brightness(0);
   }
 
   .navbar-collapse {
@@ -75,6 +76,10 @@ body.dark {
   .navbar {
     background-color: $navBG-dark;
 
+    .navbar-toggler-icon {
+      filter: brightness(2);
+    }
+
     .navbar-brand {
       color: $navItem-dark;
     }
@@ -101,6 +106,11 @@ body.dark {
         background-color: $navBG-dark;
         color: $navItemHover;
       }
+    }
+  }
+  #themeSwitchWrapper {
+    svg {
+      color: $navItem-dark;
     }
   }
 }
@@ -177,6 +187,7 @@ Dark Mode Toggle Switch
 
   svg {
     margin-top: 2px;
+    color: $navItem;
   }
 
   #themeSwitch {
